--- a/HTML/market.html
+++ b/HTML/market.html
@@ -4,9 +4,25 @@
 <head>
     <title>RPGgame</title>
     <link rel="stylesheet" type="text/css" href="../CSS/market.css">
+    <script src="../JS/roleMoving.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
-<body>	
+<body>
+	<div id="mainWrapper">
+		<div class="npcWrapper">
+			<p>商人</p>
+			<img class="businessman" src="../img/businessman.png" alt="">
+		</div>
+
+		<img class="enter" src="../img/halo.png" alt="">
+
+		<div id="role"></div>
+
+		<div class="arrowWrapper">
+            <img class="arrow" src="../img/arrow.png" alt="">
+            <p>返回城镇</p>
+        </div>
+	</div>
     <script src="../JS/market.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 
