--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,27 +5,35 @@
     <title>RPGgame</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../CSS/index.css">
+    <script src="../JS/roleMoving.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
-	
-	<div id="role">
-	
-	</div>
 
-	<img class="npc_1" src="../img/npc_1.png" alt="">
-	<img class="halo halo_left" src="../img/halo.png" alt="">
-	<img class="halo halo_right" src="../img/halo.png" alt="">
-	<div class="arrowWrapper_left">
-		<img class="arrow arrow_left" src="../img/arrow.png" alt="">
-		<p>锻造室</p>
-	</div>
-	<div class="arrowWrapper_right">
-		<img class="arrow arrow_right" src="../img/arrow.png" alt="">
-		<p>交易大厅</p>
-	</div>
+    <div id="mainWrapper">
+        <div id="role">
+        </div>
+        <img class="npc_1" src="../img/npc_1.png" alt="">
+        <img class="halo halo_left" src="../img/halo.png" alt="">
+        <img class="halo halo_right" src="../img/halo.png" alt="">
+        <div class="arrowWrapper_left">
+            <img class="arrow arrow_left" src="../img/arrow.png" alt="">
+            <p>锻造室</p>
+        </div>
+        <div class="arrowWrapper_right">
+            <img class="arrow arrow_right" src="../img/arrow.png" alt="">
+            <p>交易大厅</p>
+        </div>
 
+        <div class="dialog">
+        	<span class="speaker">NPC :</span>
+        	<p class="content">嗨！你是新来的吧，小伙子</p>
+        	<p class="cue">按space键继续</p>
+        </div>
+    </div>
     <script src="../JS/index.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 
 </html>
+
+
