--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>注册登录</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="./CSS/login.css">
+    <script src="./JS/Ajax.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./JS/md5.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
@@ -22,7 +24,7 @@
                     <input type="password" name="password" value="" placeholder="password">
                 </div>
                 <div class="inputWrapper">
-                	<input type="password" name="check" value="" placeholder="confirm password">
+                    <input type="password" name="check" value="" placeholder="confirm password">
                 </div>
                 <div class="register">注册</div>
             </div>
@@ -36,7 +38,10 @@
                 <p class="go">没有账号，去注册</p>
                 <div class="login">登录</div>
             </div>
-
+            <div class="welcome">
+            	<p class="welcomeWords">登录成功</p>
+            	<p class="count"><span class="time">5</span>秒后进入游戏</p>
+            </div>
         </div>
     </div>
     <script src="./JS/login.js" type="text/javascript" charset="utf-8" async defer></script>
