--- a/HTML/forge.html
+++ b/HTML/forge.html
@@ -14,11 +14,16 @@
         <img class="enter" src="../img/halo.png" alt="">
 
         <div id="role">
+            <p class="username"></p>
         </div>
 
         <div class="arrowWrapper">
             <img class="arrow" src="../img/arrow.png" alt="">
             <p>返回城镇</p>
+        </div>
+
+        <div class="forge">
+            
         </div>
     </div>
     <script src="../JS/forge.js" type="text/javascript" charset="utf-8" async defer></script>
