--- a/HTML/market.html
+++ b/HTML/market.html
@@ -5,6 +5,7 @@
     <title>RPGgame</title>
     <link rel="stylesheet" type="text/css" href="../CSS/market.css">
     <script src="../JS/roleMoving.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../JS/Ajax.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
@@ -16,11 +17,47 @@
 
 		<img class="enter" src="../img/halo.png" alt="">
 
-		<div id="role"></div>
+		<div id="role">
+			<p class="username"></p>
+		</div>
 
 		<div class="arrowWrapper">
             <img class="arrow" src="../img/arrow.png" alt="">
             <p>返回城镇</p>
+        </div>
+        <div class="storeWrapper">
+        	<div class="top">商店</div>
+        	<div class="goodsWrapper">
+        		<div class="good">
+        			<div class="tradeName">
+        				锻造石
+        			</div>
+        			<div class="price">200金币</div>
+        			<span class="num">购买数量: </span>
+        			<input class="number" type="text" name="number" value="" placeholder="0">
+        			<div class="buy">确认购买</div>
+        		</div>
+        		<div class="good">
+        			<div class="tradeName">
+        				止痛药
+        			</div>
+        			<div class="price">100金币</div>
+        			<span class="num">购买数量: </span>
+        			<input class="number" type="text" name="number" value="" placeholder="0">
+        			<div class="buy">确认购买</div>
+        		</div>
+        		<div class="good">
+        			<div class="tradeName">
+        				六味地黄丸
+        			</div>
+        			<div class="price">1500金币</div>
+        			<span class="num">购买数量: </span>
+        			<input class="number" type="text" name="number" value="" placeholder="0">
+        			<div class="buy">确认购买</div>
+        		</div>
+        	</div>
+
+            <div class="back">退出商城</div>
         </div>
 	</div>
     <script src="../JS/market.js" type="text/javascript" charset="utf-8" async defer></script>
